@@ -1,2 +1,2 @@
-wanpipe_linux: git ver b2503d8
-wanpipe_common: git ver 9b182f2
+wanpipe_linux: git ver 23ab060
+wanpipe_common: git ver c71136f
